
        http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
////
== News

=== Jolokia 2.5.0 released

[.news-date]
2026-02-10

We're happy to announce a new big release of Jolokia 2.5.0!

==== A word on Semantic Versioning

First - a little apology for breaking https://semver.org/[Semantic Versioning] principles. Jolokia 2.4 and now 2.5 introduced some API
changes related to refactoring and introduction of SPI interface for Jolokia Client (with 3 built-in implementations).

Jolokia is not a single library - it includes:

* Agent modules - for running Jolokia Agent as a Web Application in a https://jakarta.ee/specifications/servlet/6.1/jakarta-servlet-spec-6.1[Servlet Container], https://docs.spring.io/spring-boot/3.5/reference/actuator/endpoints.html[Spring Boot Actuator endpoint] or standalone Agent using https://docs.oracle.com/en/java/javase/17/docs/api/jdk.httpserver/module-summary.html[JDK HTTP Server].
* Java Client libraries - for accessing the Agent using HTTP Client libraries (now - 3 different implementations)
* JavaScript NPM packages - for accessing the Agent using JavaScript
* https://docs.oracle.com/en/java/javase/17/docs/api/java.management/javax/management/remote/JMXConnector.html[JMX Connector (Client)] implementation
* A Jolokia protocol specification (format of JSON messages) with own versioning scheme

Traditionally Jolokia didn't change the major version too often and we've decided to continue this tradition. +