@@ -257,9 +257,9 @@ values in the console.
 git clone git@github.com:jolokia/jolokia.git
 cd jolokia
 mvn -Dmaven.repo.local=/tmp/repo \
-    -DdevelopmentVersion=2.5.1-SNAPSHOT \
-    -DreleaseVersion=2.5.0 \
-    -Dtag=v2.5.0 \
+    -DdevelopmentVersion=2.5.2-SNAPSHOT \
+    -DreleaseVersion=2.5.1 \
+    -Dtag=v2.5.1 \
     -Pdist release:prepare
 mvn -Dmaven.repo.local=/tmp/repo \
     -Pdist release:perform
@@ -346,7 +346,7 @@ branch of Jolokia and pushed the changes:
 ```console
 git checkout gh-pages
 # copy changed site
-grep -lr 2.5.1-SNAPSHOT | xargs sed -i 's/2.5.1-SNAPSHOT/2.5.0/g'
+grep -lr 2.5.2-SNAPSHOT | xargs sed -i 's/2.5.2-SNAPSHOT/2.5.1/g'
 git add .
 git commit -m '[site] Generate new Jolokia site'
 git push origin HEAD
@@ -359,7 +359,7 @@ git push origin HEAD
 3. Set `<currentStableVersion>` to new released version in `pom.xml`
 4. If NPM packages are released, Set new JS version in `package.json` files and in `client/javascript-esm/packages/jolokia/src/jolokia.ts` for `CLIENT_VERSION` field
 5. Update `src/changes/changes.xml` and `src/site/asciidoc/news.adoc`
-6. `mvn -Dmaven.repo.local=/tmp/repo -DdevelopmentVersion=2.5.1-SNAPSHOT -DreleaseVersion=2.5.0 -Dtag=v2.5.0 -Pdist release:prepare`
+6. `mvn -Dmaven.repo.local=/tmp/repo -DdevelopmentVersion=2.5.2-SNAPSHOT -DreleaseVersion=2.5.1 -Dtag=v2.5.1 -Pdist release:prepare`
 7. `mvn -Dmaven.repo.local=/tmp/repo -Pdist release:perform`
 8. Create release at https://github.com/jolokia/jolokia/releases (`target/checkout/assembly/target`: `.tar.gz`, `.zip`, `.asc` and `agent/jvm/target`: `.deb`, `.asc`)
 9. Handle the release at https://central.sonatype.com/publishing/deployments
@@ -379,7 +379,7 @@ yarn npm publish
 git checkout gh-pages
 # copy changed site
 # change SNAPSHOT version - should be done better...
-grep -lr 2.5.1-SNAPSHOT | xargs sed -i 's/2.5.1-SNAPSHOT/2.5.0/g'
+grep -lr 2.5.2-SNAPSHOT | xargs sed -i 's/2.5.2-SNAPSHOT/2.5.1/g'
 git add .
 git commit -m '[site] Generate new Jolokia site'
 git push origin HEAD
