@@ -25,7 +25,7 @@
   <skin>
     <groupId>org.jolokia</groupId>
     <artifactId>jolokia-tools-siteskin</artifactId>
-    <version>2.5.0</version>
+    <version>2.5.1</version>
   </skin>
 
   <bannerLeft>
